[tool.poetry]
name = "desafio"
version = "0.1.0"
description = ""
authors = ["Erick Queiroz de Faria <erick42q@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
blue = "^0.9.1"



[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.blue]
line-length = 100

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true


[tool.poetry.scripts]
start = "python:app.py"